[gd_scene load_steps=5 format=3 uid="uid://bh8ibud718isi"]

[ext_resource type="Script" path="res://Scenes/tutorial_game.gd" id="1_45bml"]
[ext_resource type="PackedScene" uid="uid://bcmso05blwfu4" path="res://Scenes/player.tscn" id="1_dwjnh"]
[ext_resource type="PackedScene" uid="uid://c0rubpuyo8g6" path="res://Scenes/pine_tree.tscn" id="2_u3h17"]

[sub_resource type="Curve2D" id="Curve2D_msxql"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -187, -179, 0, 0, 0, 0, -222, 1300, 0, 0, 0, 0, 2180, 1297, 0, 0, 0, 0, 2162, -186, 0, 0, 0, 0, -187, -179)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_45bml")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -79.0
offset_top = -60.0
offset_right = 2004.0
offset_bottom = 1144.0
color = Color(0.60769, 0.794319, 0.492337, 1)
metadata/_edit_use_anchors_ = true

[node name="Player" parent="." instance=ExtResource("1_dwjnh")]
position = Vector2(970, 560)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-970, -560)
curve = SubResource("Curve2D_msxql")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-187, -179)
rotation = 1.59446

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="ScoreBoard" type="Label" parent="Player/Camera2D"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 777.0
offset_top = -525.0
offset_right = 942.0
offset_bottom = -446.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Score: 0"

[node name="Trees" type="Node2D" parent="."]
y_sort_enabled = true

[node name="PineTree" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(197, 927)

[node name="PineTree2" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(307, 752)

[node name="PineTree3" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1335, 888)

[node name="PineTree4" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1578, 249)

[node name="PineTree5" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(356, 236)

[node name="PineTree6" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1710, 949)

[node name="PineTree7" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(899, 367)

[node name="PineTree8" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1092, 151)

[node name="PineTree9" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1703, 615)

[node name="PineTree10" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(763, 922)

[node name="PineTree11" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1107, 624)

[node name="PineTree12" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(438, 431)

[node name="PineTree13" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(75, 394)

[node name="PineTree14" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-231, 100)

[node name="PineTree15" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-348, 511)

[node name="PineTree16" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-269, 817)

[node name="PineTree17" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-631, 795)

[node name="PineTree18" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-831, 281)

[node name="PineTree19" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-627, -229)

[node name="PineTree20" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-1084, -164)

[node name="PineTree21" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-873, -497)

[node name="PineTree22" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-575, 55)

[node name="PineTree23" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-1099, 319)

[node name="PineTree24" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-1047, 666)

[node name="PineTree25" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-601, 421)

[node name="PineTree26" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-378, 1232)

[node name="PineTree27" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-858, 1266)

[node name="PineTree28" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-1062, 908)

[node name="PineTree29" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-722, 1606)

[node name="PineTree30" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-1213, 1497)

[node name="PineTree31" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-1020, 1776)

[node name="PineTree32" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-401, 1787)

[node name="PineTree33" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-839, 1920)

[node name="PineTree34" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-356, 1429)

[node name="PineTree35" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-27, 1308)

[node name="PineTree36" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-61, 1840)

[node name="PineTree37" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(97, 1550)

[node name="PineTree38" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(226, 1942)

[node name="PineTree39" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(264, 1278)

[node name="PineTree40" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-563, -584)

[node name="PineTree41" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-341, -451)

[node name="PineTree42" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-246, -195)

[node name="PineTree43" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(181, -297)

[node name="PineTree44" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-103, -618)

[node name="PineTree45" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(131, 88)

[node name="PineTree46" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(339, 1565)

[node name="PineTree47" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(29, 685)

[node name="PineTree48" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(-76, 968)

[node name="PineTree49" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(513, 1837)

[node name="PineTree50" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(509, 995)

[node name="PineTree51" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(773, 1855)

[node name="PineTree52" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(551, 1278)

[node name="PineTree53" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(728, 1485)

[node name="PineTree54" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1113, 1833)

[node name="PineTree55" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(996, 1266)

[node name="PineTree56" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1022, 1523)

[node name="PineTree57" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1362, 1852)

[node name="PineTree58" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1249, 1232)

[node name="PineTree59" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1747, 1901)

[node name="PineTree60" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1468, 1455)

[node name="PineTree61" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(671, 610)

[node name="PineTree62" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1102, 851)

[node name="PineTree63" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(641, 100)

[node name="PineTree64" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1419, 515)

[node name="PineTree65" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(162, -542)

[node name="PineTree66" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(407, -546)

[node name="PineTree67" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(339, -134)

[node name="PineTree68" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(573, -417)

[node name="PineTree69" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(747, -214)

[node name="PineTree70" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(943, -599)

[node name="PineTree71" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1868, 1357)

[node name="PineTree72" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1940, 1652)

[node name="PineTree73" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1642, 1153)

[node name="PineTree74" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2136, 1867)

[node name="PineTree75" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2529, 1342)

[node name="PineTree76" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2412, 1078)

[node name="PineTree77" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2861, 1882)

[node name="PineTree78" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2548, 1791)

[node name="PineTree79" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2925, 1361)

[node name="PineTree80" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2159, 1448)

[node name="PineTree81" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2083, 957)

[node name="PineTree82" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(3069, 1093)

[node name="PineTree83" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2718, 862)

[node name="PineTree84" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2317, 674)

[node name="PineTree85" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1981, 610)

[node name="PineTree86" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2740, 542)

[node name="PineTree87" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2974, 364)

[node name="PineTree88" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2302, 387)

[node name="PineTree89" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2759, 107)

[node name="PineTree90" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2151, 145)

[node name="PineTree91" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2389, -78)

[node name="PineTree92" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2986, -195)

[node name="PineTree93" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1283, -191)

[node name="PineTree94" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1026, -327)

[node name="PineTree95" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1747, -2)

[node name="PineTree96" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1389, 62)

[node name="PineTree97" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1321, -546)

[node name="PineTree98" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1804, -361)

[node name="PineTree99" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2268, -327)

[node name="PineTree100" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1710, -591)

[node name="PineTree101" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2869, -523)

[node name="PineTree102" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2619, -391)

[node name="PineTree103" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2208, -606)

[node name="PineTree104" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2083, -168)

[node name="PineTree105" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(2604, 243)

[node name="PineTree106" parent="Trees" instance=ExtResource("2_u3h17")]
position = Vector2(1921, 277)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -51.5
offset_right = 215.0
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 75
text = "Game Over"
uppercase = true

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
